<resources>
    <string name="app_name">ConsutationManagement</string>
    <string name="first_name">Nom</string>
    <string name="last_name">Prénom</string>
    <string name="age">Age</string>
    <string name="descr">Description du cas</string>
    <string name="insc"> Inscription</string>
    <string name="email"> Adresse e-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="tel"> Numéro de téléphone</string>
    <string name="conf">Confirmer</string>
    <string name="conx">Connexion</string>
    <string name="sign_up">Créer un Compte</string>
    <string name="log_in">Se Connecter</string>
    <string name="med">Médecin</string>
    <string name="or">OU</string>
    <string name="rdv">Rendez-Vous</string>
    <string name="rdv_acc"> Rendez-Vous Accepté </string>
    <string name="rdv_ref"> Rendez-Vous Refusé </string>


</resources>